[package]
name = "stardust"
version = "0.0.1"
authors = ["Dario Ostuni <dario.ostuni@gmail.com>"]
license = "Apache-2.0"

[dependencies]
toml = "0.2.1"
lz4-compress = "0.1"
byteorder = "1"
twox-hash = "1.0.1"

[[bin]]
name = "stardust"
path = "src/client.rs"

[[bin]]
name = "stardustd"
path = "src/server.rs"
